--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,39 @@
+/* Estilos para o contêiner dos cartões */
 .movie-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    justify-content: space-between;
   }
 
   /* Estilos para os cartões */
   .movie-card {
+    flex: 0 0 calc(33.33% - 20px);
+    margin: 10px;
     border: 1px solid #ccc;
     padding: 10px;
-    width: calc(33.33% - 20px); /* Distribuir os cartões em 3 colunas */
     box-sizing: border-box;
   }
   .movie-card img {
     max-width: 100%;
     height: auto;
+  }
+
+  /* Estilos para a barra de navegação */
+  .navbar {
+    background-color: #333;
+    overflow: hidden;
+  }
+
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
   }
